Changes in images directories and add https in apiUrl

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home">
-    <img src="../../../assets/images/hogwartLogo.png" width="60%" height="auto">
+    <img src="assets/images/hogwartLogo.png" width="60%" height="auto">
 </div>
 
 
