--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="nav-bar">
     <nav style="background-color: transparent !important;" class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/home">
-            <img src="../../../assets/images/hogwartLogo.png" width="100px" height="50px">
+            <img src="assets/images/hogwartLogo.png" width="100px" height="50px">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
